still very buggy, breaks at 1e9e15, but at least you can get to 1e9e15 (and progress starts slowing down near there, though it's probably due to inefficiency and things taking a while to propagate rather than due to the game's balance)

--- a/b2/css/styles.css
+++ b/b2/css/styles.css
@@ -8,13 +8,13 @@
 
 .column {
   float: left;
-  width: 300px;
+  width: 200px;
 }
 
 .currency {
-  width: 300px;
+  width: 200px;
   border: 1px solid black;
-  height: 100px;
+  height: 150px;
   padding: 10px;
   display: flex;
   justify-content: center; /* align horizontal */
@@ -22,7 +22,8 @@
 }
 
 .prestige {
-  width: 300px;
+  width: 200px;
+  height: 100px;
   border: 1px solid black;
   text-align: center;
   padding: 20px;
@@ -36,8 +37,8 @@
 
 .generator {
   border: 1px solid black;
-  width: 300px;
-  height: 120px;
+  width: 200px;
+  height: 150px;
   text-align: center;
 }
 
